# algosynth

./: CMakeLists.txt
scripts/: play.sh
src/: SoundEtude.cpp  SoundEtude.hpp  main.cpp
